--- a/contacto.html
+++ b/contacto.html
@@ -45,6 +45,7 @@
          </header>
         <!-- End Header Nico Section -->
 
+        <img src="img_r/banner.1.jpg" style="width: 100%; height: auto;" alt="Aguas Concepcion">
 <!-- start contact us Section -->
 <section id="ctn_sec">
 	<div class="container">
@@ -63,6 +64,9 @@
 						</div>
 						<div class="form-group">
 							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
+						</div>
+            <div class="form-group">
+							<input type="telefono" name="telefono" class="form-control mail-field" required="required" placeholder="Tu Telefono">
 						</div>
 						<div class="form-group">
 							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
