--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
             </section>
         </div>
 -->
-  <div class="img_item">
-
-  </div>
+<img src="img_r/banner.2.jpg" style="width: 100%; height: auto;" alt="Aguas Concepcion">
 
 
 
@@ -193,12 +191,16 @@
 			</div>
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
 				<div class="abt">
-					<p>Se lleva a cabo al interior de una plata purificadora con tecnología de punta.
-Aguas Concepcion, nace desde lo mas profundo de nuestra tierra; las aguas son extraídas desde corrientes subterráneas, almacenadas y decantadas, para posteriormente ser potabilizadas
-Luego de lo anterior, comienza el proceso de purificación, mediante un filtro de carbono activo, las aguas son filtradas de diversas impurezas, tales como cloro, minares, entre otros.
-Continuando el proceso, las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de impureza y/o partícula que nuestro producto pudiera tener hasta ese momento.</p>
-          <p>Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar, es despojado de cualquier clase de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma, con agua purificada, obteniendo así un producto de excelencia “libre de sodio al 100%”.</p>
-          <p>Ambos procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia. De esta forma Aguas Concepcion cobra vida.</p>
+					<p>Se lleva a cabo al interior de una planta purificadora con tecnología de punta.
+            Aguas Concepcion, nace desde lo mas profundo de nuestra tierra; las aguas son extraídas desde corrientes subterráneas, almacenadas y decantadas, para posteriormente ser potabilizadas.</p>
+
+          <p>  Luego comienza el proceso de purificación, mediante un filtro de carbono activo, las aguas son filtradas de diversas impurezas, tales como cloro, minerales, entre otros.
+            Continuando el proceso, las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de impureza y/o partícula que nuestro producto pudiera tener hasta ese momento.</p>
+
+            <p>Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar, es despojado de cualquier clase
+            de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma, con agua purificada, obteniendo así un producto de excelencia “libre de sodio al 100%”.</p>
+
+            <p>Ambos procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia. De esta forma Aguas Concepcion cobra vida.  	</p>
 				</div>
 			</div>
 		</div>
@@ -226,7 +228,7 @@ Continuando el proceso, las aguas son sometidas en nuestra planta de osmosis inv
 					<div class="sngl_tstm">
 						<i class="fa fa-quote-right"></i>
 						<h3>Cuerpo</h3>
-						<p>“hasta el 70% de nuestro cuerpo es Agua”</p>
+						<p>“el 70% de nuestro cuerpo es agua, recuerda tomar 8 vasos de agua al día”</p>
 						<h6> -Erre Pe</h6>
 					</div>
 				</div>
@@ -557,6 +559,9 @@ End our team Section -->
 						</div>
 						<div class="form-group">
 							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
+						</div>
+						<div class="form-group">
+							<input type="telefono" name="telefono" class="form-control mail-field" required="required" placeholder="Tu Telefono">
 						</div>
 						<div class="form-group">
 							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
