--- a/about.html
+++ b/about.html
@@ -292,6 +292,9 @@ es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; qu
 						<div class="form-group">
 							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
 						</div>
+            <div class="form-group">
+							<input type="telefono" name="telefono" class="form-control mail-field" required="required" placeholder="Tu Telefono">
+						</div>
 						<div class="form-group">
 							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
 						</div>
