--- a/about.html
+++ b/about.html
@@ -1,33 +1,35 @@
 <!doctype html>
 <html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Aguas Concepción</title>
-        <meta name="description" content="">
-        <link rel="stylesheet" href="./css/estilos.css">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Aguas Concepción</title>
+  <meta name="description" content="">
+  <link rel="stylesheet" href="./css/estilos.css">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <!--[if lt IE 9]> <script src="js/html5shiv.js"></script>
 	<script src="js/respond.min.js"></script> <![endif]-->
-        <!-- Place favicon.ico in the root directory -->
-		<link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet" href="css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/owl.carousel.css">
-        <link rel="stylesheet" href="css/responsive.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/fonts.css">
+  <!-- Place favicon.ico in the root directory -->
+  <link href='https://fonts.googleapis.com/css?family=Lato:400,300,700' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/owl.carousel.css">
+  <link rel="stylesheet" href="css/responsive.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/fonts.css">
 
-    </head>
+</head>
+
 <body>
 
 
-    <header>
+  <header>
     <div class="menu_bar navbar">
       <a href="#" class="bt-menu"><span class="icon-menu"></span>Aguas Concepción</a>
     </div>
@@ -38,45 +40,43 @@
         <li><a href="about.html">Quienes Somos</a></li>
         <li><a href="productos.html">Productos</a></li>
         <li><a href="contacto.html">Contacto</a></li>
-       </li>
+        </li>
 
       </ul>
     </nav>
   </header>
 
-        <!-- End Header Nico Section -->
+  <!-- End Header Nico Section -->
 
 
-<!-- start slider Section-->
+  <!-- start slider Section-->
 
-<!-- start about Section -->
-<section id="abt_sec">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
-				<div class="title_sec">
-					<h1>Aguas Concepción</h1>
-					<h2>Nuestros procesos se llevan acabo dentro de una planta embotelladora, la cual cuenta con tecnología de punta en esta materia.</h2>
-				</div>
-			</div>
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
-				<div class="abt">
-					<p>
-Aguas Concepcion, nace desde lo mas profundo de nuestra tierra; las aguas son extraídas desde corrientes subterráneas, almacenadas y decantadas, para posteriormente ser potabilizadas
-Luego de lo anterior comienza el proceso de purificación, mediante un filtro de carbono activo, las aguas son filtradas de distintas impurezas, tales como “cloro y minerales” entre otros.
-Continuando el proceso las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de impureza y/o partícula que nuestro producto pudiera tener hasta ese momento.
-
-Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar, es despojado de cualquier clase de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma y con agua purificada, con el fin de obtener un producto “libre de sodio al 100%”.
-
-Ambos procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia, de esta forma Aguas Concepcion cobra vida.
-</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End About Section -->
-<!-- start our team Section
+  <!-- start about Section -->
+  <section id="abt_sec">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+          <div class="title_sec">
+            <h1>Aguas Concepción</h1>
+            <h2>Nuestros procesos se llevan acabo dentro de una planta embotelladora, la cual cuenta con tecnología de punta en esta materia.</h2>
+          </div>
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+          <div class="abt">
+            <p>
+              Aguas Concepcion, nace desde lo mas profundo de nuestra tierra; las aguas son extraídas desde corrientes subterráneas, almacenadas y decantadas, para posteriormente ser potabilizadas Luego de lo anterior comienza el proceso de purificación, mediante un
+              filtro de carbono activo, las aguas son filtradas de distintas impurezas, tales como “cloro y minerales” entre otros. Continuando el proceso las aguas son sometidas en nuestra planta de osmosis inversa; la cual elimina cualquier clase de
+              impureza y/o partícula que nuestro producto pudiera tener hasta ese momento. Paralelamente a lo anterior, se lleva a cabo un meticuloso proceso de higiene, donde cada bidón es revisado para verificar que efectivamente se pueda reutilizar,
+              es despojado de cualquier clase de adhesivos, tapas y demás con el fin de entrar en nuestra limpiadora, la cual realiza el proceso de forma autónoma y con agua purificada, con el fin de obtener un producto “libre de sodio al 100%”. Ambos
+              procesos se juntan en nuestro centro de distribución y posteriormente son repartidos a toda nuestra familia, de esta forma Aguas Concepcion cobra vida.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End About Section -->
+  <!-- start our team Section
 <section id="tm_sec">
 	<div class="container">
 		<div class="row">
@@ -121,7 +121,7 @@ Ambos procesos se juntan en nuestro centro de distribución y posteriormente son
 </section>
 End our team Section -->
 
-<!-- start Counting section
+  <!-- start Counting section
 <section id="counting_sec">
 <div class="container">
 	<div class="row">
@@ -159,7 +159,7 @@ End our team Section -->
 </section>
 End Counting section-->
 
-<!-- start progress bar Section
+  <!-- start progress bar Section
 <section id="skill_sec">
 	<div class="container">
 		<div class="row">
@@ -222,179 +222,186 @@ End Counting section-->
 </section>
  End progress bar Section -->
 
-<div class="container">
+  <div class="container">
     <div class="row">
-        <img src="img_r/logo.jpeg" class="logo_aguas" alt="Aguas Concepcion">
+      <img src="img_r/logo.jpeg" class="logo_aguas" alt="Aguas Concepcion">
 
     </div>
 
-</div>
-<!-- start Latest post Section -->
-<section id="lts_sec">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
-				<div class="title_sec">
-					<h1>Sobre nosotros</h1>
-					<p>Creados en el 2017, siendo una empresa que adopta el reto de llegar con agua purificada a hogares y negocios del Gran Concepción; con la tarea de entregar un servicio de excelencia que cumpla con normas de calidad internacionales, para así ser reconocidos y posicionados como líderes de la industria.</p>
-				</div>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="lts_pst">
+  </div>
+  <!-- start Latest post Section -->
+  <section id="lts_sec">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+          <div class="title_sec">
+            <h1>Sobre nosotros</h1>
+            <p>Creados en el 2017, siendo una empresa que adopta el reto de llegar con agua purificada a hogares y negocios del Gran Concepción; con la tarea de entregar un servicio de excelencia que cumpla con normas de calidad internacionales, para así
+              ser reconocidos y posicionados como líderes de la industria.</p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="lts_pst">
 
-					<h2>Compromiso</h2>
-					<p>Somos una Empresa comprometida con nuestro entorno, el mundo y directamente con tus seres queridos,
-es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; que permiten integrar en nuestra esencia las actividades claves como reutilizar y reciclar.
-</p>
+            <h2>Compromiso</h2>
+            <p>Somos una Empresa comprometida con nuestro entorno, el mundo y directamente con tus seres queridos, es por esto que desde nuestros inicios trabajamos con alianzas estratégicas; que permiten integrar en nuestra esencia las actividades claves
+              como reutilizar y reciclar.
+            </p>
 
-				</div>
-			</div>
-      <div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="lts_pst">
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="lts_pst">
 
-					<h2>Visión</h2>
-					<p>"Ser el mayor productor y distribuidor de Agua Purificada y Libre de Sodio, del sur de Chile"</p>
+            <h2>Visión</h2>
+            <p>"Ser el mayor productor y distribuidor de Agua Purificada y Libre de Sodio, del sur de Chile"</p>
 
-				</div>
-        <br>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-12">
-				<div class="lts_pst">
+          </div>
+          <br>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="lts_pst">
 
-					<h2>Misión</h2>
-				<p>Desde lo mas interno de nuestra región, nace Aguas Concepcion, con el objetivo de proveer  agua purificada a toda nuestra zona y alrededores, en en futuro próximo toda nuestra región; trabajado siempre para nuestros clientes y sus familias, comprometiéndonos con ellos y con el entorno que habitamos.
-</p>
+            <h2>Misión</h2>
+            <p>Desde lo mas interno de nuestra región, nace Aguas Concepcion, con el objetivo de proveer agua purificada a toda nuestra zona y alrededores, en en futuro próximo toda nuestra región; trabajado siempre para nuestros clientes y sus familias,
+              comprometiéndonos con ellos y con el entorno que habitamos.
+            </p>
 
-				</div>
-			</div>
+          </div>
+        </div>
 
-		</div>
-	</div>
-</section>
-<!-- End Latest post Section -->
+      </div>
+    </div>
+  </section>
+  <!-- End Latest post Section -->
 
-<!-- start contact us Section -->
-<section id="ctn_sec">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
-				<div class="title_sec">
-					<h1>Contactanos!</h1>
-					<h2>El mejor agua que beberas hoy!</h2>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div id="cnt_form">
-					<form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
-						<div class="form-group">
-						<input type="text" name="name" class="form-control name-field" required="required" placeholder="Tu Nombre">
-						</div>
-						<div class="form-group">
-							<input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
-						</div>
-            <div class="form-group">
-							<input type="telefono" name="telefono" class="form-control mail-field" required="required" placeholder="Tu Telefono">
-						</div>
-						<div class="form-group">
-							<textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
-						</div>
-						<div class="form-group">
-							<button type="submit" class="btn btn-primary">Enviar</button>
-						</div>
-					</form>
-				</div>
-			</div>
-			<div class="col-lg-6 col-md-6 col-sm-6">
-				<div class="cnt_info">
-					<ul>
-						<li><i class="fa fa-facebook"></i><p><a target="_blank" href="https://www.facebook.com/Aguas-Concepción-1967725063471150/?ref=page_internal">Facebook</a></li>
-						<li><i class="fa fa-envelope"></i><p>contacto@aguasconcepcion.cl</p></li>
-						<li><i class="fa fa-phone"></i><p>+56 9 99116927</p></li>
-					</ul>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-<!-- End contact us  Section -->
-<hr>
-<!-- start footer Section -->
-<footer id="ft_sec">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="ft">
-					<ul>
-						<li><a href="https://www.facebook.com/Aguas-Concepción-1967725063471150/?ref=page_internal" target="_blank"><i class="fa fa-facebook"></i></a></li>
-						<!--<li><a href=""><i class="fa fa-twitter"></i></a></li>-->
-						<li><a href="https://www.linkedin.com/company/11313070/"><i class="fa fa-linkedin" target="_blank"></i></a></li>
-						<!--<li><a href=""><i class="fa fa-skype"></i></a></li>-->
+  <!-- start contact us Section -->
+  <section id="ctn_sec">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs12 ">
+          <div class="title_sec">
+            <h1>Contactanos!</h1>
+            <h2>El mejor agua que beberas hoy!</h2>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div id="cnt_form">
+            <form id="contact-form" class="contact" name="contact-form" method="post" action="send-mail.php">
+              <div class="form-group">
+                <input type="text" name="name" class="form-control name-field" required="required" placeholder="Tu Nombre">
+              </div>
+              <div class="form-group">
+                <input type="email" name="email" class="form-control mail-field" required="required" placeholder="Tu Email">
+              </div>
+              <div class="form-group">
+                <input type="telefono" name="telefono" class="form-control mail-field" required="required" placeholder="Tu Telefono">
+              </div>
+              <div class="form-group">
+                <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="Mensaje"></textarea>
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-primary">Enviar</button>
+              </div>
+            </form>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6">
+          <div class="cnt_info">
+            <ul>
+              <li><i class="fa fa-facebook"></i>
+                <p><a target="_blank" href="https://www.facebook.com/Aguas-Concepción-1967725063471150/?ref=page_internal">Facebook</a></li>
+              <li><i class="fa fa-envelope"></i>
+                <p>contacto@aguasconcepcion.cl</p>
+              </li>
+              <li><i class="fa fa-phone"></i>
+                <p>+56 9 99116927</p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End contact us  Section -->
+  <hr>
+  <!-- start footer Section -->
+  <footer id="ft_sec">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="ft">
+            <ul>
+              <li><a href="https://www.facebook.com/Aguas-Concepción-1967725063471150/?ref=page_internal" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <!--<li><a href=""><i class="fa fa-twitter"></i></a></li>-->
+              <li><a href="https://www.linkedin.com/company/11313070/"><i class="fa fa-linkedin" target="_blank"></i></a></li>
+              <!--<li><a href=""><i class="fa fa-skype"></i></a></li>-->
 
-					</ul>
-				</div>
-				<ul class="copy_right">
-					<li>&copy;Aguas Concepción</li>
-					<li>Developed by N. R.</li>
-				</ul>
-			</div>
-		</div>
-	</div>
-</footer>
-<!-- End footer Section -->
+            </ul>
+          </div>
+          <ul class="copy_right">
+            <li>&copy;Aguas Concepción</li>
+            <li>Powered By <a href="https://github.com/nrodriguezn">nrodriguezn</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- End footer Section -->
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 
-    <script type="text/javascript" src="./js/menu.js"></script>
-<script src="js/isotope.pkgd.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="./js/menu.js"></script>
+  <script src="js/isotope.pkgd.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 
-<script src="js/appear.js"></script>
-<script src="js/jquery.counterup.min.js"></script>
-<script src="js/waypoints.min.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/showHide.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/jquery.easing.min.js"></script>
-<script src="js/scrolling-nav.js"></script>
-<script src="js/plugins.js"></script>
-
-
-<script src="js/main.js"></script>
-
-<script src="js/showHide.js" type="text/javascript"></script>
+  <script src="js/appear.js"></script>
+  <script src="js/jquery.counterup.min.js"></script>
+  <script src="js/waypoints.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/showHide.js"></script>
+  <script src="js/jquery.nicescroll.min.js"></script>
+  <script src="js/jquery.easing.min.js"></script>
+  <script src="js/scrolling-nav.js"></script>
+  <script src="js/plugins.js"></script>
 
 
-<script>
-    jQuery(document).ready(function( $ ) {
-        $('.counter').counterUp({
-            delay: 10,
-            time: 1000
-        });
+  <script src="js/main.js"></script>
+
+  <script src="js/showHide.js" type="text/javascript"></script>
+
+
+  <script>
+    jQuery(document).ready(function($) {
+      $('.counter').counterUp({
+        delay: 10,
+        time: 1000
+      });
     });
-</script>
+  </script>
 
-<script>
+  <script>
+    //Hide Overflow of Body on DOM Ready //
+    $(document).ready(function() {
+      $("body").css("overflow", "hidden");
+    });
 
-  //Hide Overflow of Body on DOM Ready //
-$(document).ready(function(){
-    $("body").css("overflow", "hidden");
-});
+    // Show Overflow of Body when Everything has Loaded
+    $(window).load(function() {
+      $("body").css("overflow", "visible");
+      var nice = $('html').niceScroll({
+        cursorborder: "5",
+        cursorcolor: "#00AFF0",
+        cursorwidth: "3px",
+        boxzoom: true,
+        autohidemode: true
+      });
 
-// Show Overflow of Body when Everything has Loaded
-$(window).load(function(){
-    $("body").css("overflow", "visible");
-    var nice=$('html').niceScroll({
-	cursorborder:"5",
-	cursorcolor:"#00AFF0",
-	cursorwidth:"3px",
-	boxzoom:true,
-	autohidemode:true
-	});
-
-});
-</script>
-
+    });
+  </script>
 
 
-    </body>
+
+</body>
+
 </html>
