--- a/about.html
+++ b/about.html
@@ -341,7 +341,7 @@ End Counting section-->
           </div>
           <ul class="copy_right">
             <li>&copy;Aguas Concepción</li>
-            <li>Powered By <a href="https://github.com/nrodriguezn">nrodriguezn</a></li>
+            <li>Powered By <a href="https://github.com/nrodriguezn" target="_blank">nrodriguezn</a></li>
           </ul>
         </div>
       </div>
