--- a/contacto.html
+++ b/contacto.html
@@ -114,7 +114,7 @@
           </div>
           <ul class="copy_right">
             <li>&copy;Aguas Concepción</li>
-            <li>Powered By <a href="https://github.com/nrodriguezn">nrodriguezn</a></li>
+            <li>Powered By <a href="https://github.com/nrodriguezn" target="_blank">nrodriguezn</a></li>
           </ul>
         </div>
       </div>
