--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Aguas Concepción</title>
-  <meta name="description" content="">
+  <meta name="description" content="Aguas Concepción comprometidos con el medio ambiente, Agua Purificada Purificada Libre de Sodio, Reparto Gratuito de todos nuestros productos para Concepción y sus alrededores, contactanos al WhatsApp +569-99116927">
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8">
 
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
@@ -609,7 +610,7 @@ End our team Section -->
           </div>
           <ul class="copy_right">
             <li>&copy;Aguas Concepción</li>
-            <li>Powered By <a href="https://github.com/nrodriguezn">nrodriguezn</a></li>
+            <li>Powered By <a href="https://github.com/nrodriguezn" target="_blank">nrodriguezn</a></li>
           </ul>
         </div>
       </div>
