--- a/productos.html
+++ b/productos.html
@@ -27,6 +27,13 @@
 </head>
 
 <body>
+
+  <div id="loader-wrapper">
+    <div class="logo"></div>
+    <div id="loader">
+    </div>
+  </div>
+
   <header>
 
     <div class="menu_bar navbar">
@@ -132,7 +139,7 @@
             </ul>
           </div>
 
-          <div class="all-portfolios ">
+          <div class="all-portfolios centrame">
 
             <!--       INICIO PRODUCTOS VENTA       -->
 
